--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,17 @@
 {
     "functions": {
-        "*.php": { "runtime": "vercel-php@0.6.0" }
+        "api/*.php": {
+            "runtime": "vercel-php@0.6.0"
+        }
     },
     "routes": [
-        { "src": "/public/(.*)", "dest": "/public/$1" },
-        { "src": "/(.*)", "dest": "/index.php" }
+        {
+            "src": "/public/(.*)",
+            "dest": "/public/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/api/index.php"
+        }
     ]
 }
