--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
             "dest": "/public/$1"
         },
         {
+            "src": "/(css|js|images|fonts)/(.*)",
+            "dest": "/public/$1/$2"
+        },
+        {
             "src": "/(.*)",
             "dest": "/api/index.php"
         }
