--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,9 @@
     },
     "routes": [
         {
+            "handle": "filesystem"
+        },
+        {
             "src": "/public/(.*)",
             "dest": "/public/$1"
         },
