--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ node_modules/
 # Build/Temp
 tmp/
 temp/
+
+# Uploaded Files (should be stored in cloud storage for production)
+public/images/blog-*
+public/images/therapist-*
+public/uploads/
