--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
     "functions": {
         "api/*.php": {
-            "runtime": "vercel-php@0.7.4"
+            "runtime": "vercel-php@0.7.4",
+            "maxDuration": 30
         }
     },
     "routes": [
